--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,7 @@
  .app {
-    width: 98vw;
-    height: 97vh;
+    width: 100vw;
+    height: 100vh;
     display: grid;
     place-items: center;
+    margin: 0;
  }
