--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -2,9 +2,15 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 0.5;
     top: 0;
     left: 0;
-    background-color: red;
+    background-color: white;
     z-index: 5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#logo {
+    width: 10em;
+    height:  5em; 
 }
