--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -5,12 +5,15 @@
     top: 0;
     left: 0;
     background-color: white;
+    opacity: 0.9;
     z-index: 5;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 7em;
 }
 #logo {
     width: 10em;
     height:  5em; 
+    margin: 2em;
 }
