--- a/src/styles/explorebtn.css
+++ b/src/styles/explorebtn.css
@@ -8,4 +8,16 @@
     color: black;
     border: 3px solid gray;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 0.5em;
+}
+#menu-btn-icon {
+    width: 3em;
+    height: 2em;
+}
+h5 {
+    margin: 0;
 }
