--- a/src/styles/explorebtn.css
+++ b/src/styles/explorebtn.css
@@ -14,6 +14,19 @@
     justify-content: space-around;
     gap: 0.5em;
 }
+#menu-btn {
+    width: 5em;
+    padding: 3em;
+    aspect-ratio: 1;
+    color: black;
+    border: 3px solid gray;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 0.5em;
+}
 #menu-btn-icon {
     width: 3em;
     height: 2em;
