--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,10 +1,20 @@
 .home {
     width: 100%;
     height: 100%;
+    display: flex;
     flex-direction: column;
 }
 #logo {
     width: 7em;
     height: 3em;
     background-color: blue;
+}
+#viewport:nth-child(1) {
+    width: 100vw;
+    height: 100vh;
+    background-color: antiquewhite;
+}
+#social-media {
+    width: 1.5em;
+    aspect-ratio: 1;
 }
