--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,18 +3,23 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    color: aliceblue;
 }
 #logo {
     width: 7em;
     height: 3em;
-    background-color: blue;
 }
-#viewport:nth-child(1) {
+#viewport {
     width: 100vw;
     height: 100vh;
-    background-color: antiquewhite;
 }
 #social-media {
     width: 1.5em;
     aspect-ratio: 1;
+}
+#viewport:nth-child(1) {
+    background-image: url("../assets/slider-img.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
