--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -21,5 +21,15 @@
     background-image: url("../assets/slider-img.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover ;
+}
+#viewport:nth-child(2) {
+    display: grid;
+    place-items: center;
+}
+#text-box {
+    width: 16rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
