--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -10,10 +10,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 7em;
+    gap: 5em;
 }
 #logo {
-    width: 10em;
-    height:  5em; 
+    width: 12em;
+    height:  6em; 
     margin: 2em;
+}
+#logo-svg {
+    width: 40rem;
+}
+.bottom-text,
+.top-text {
+    position: absolute;
+}
+.bottom-text {
+    left: 10em;
+    bottom: 2em;
+}
+.top-text {
+    top: -1em;
+    left: 3em; 
 }
