--- a/src/styles/explorebtn.css
+++ b/src/styles/explorebtn.css
@@ -1,3 +1,10 @@
+@keyframes radiate {
+    from { scale: 1.1;}
+    to {
+      transform: scale(1.3);
+      opacity: 0;
+    }
+  }
 #btn {
     width: 5em;
     padding: 3em;
@@ -13,6 +20,15 @@
     align-items: center;
     justify-content: space-around;
     gap: 0.5em;
+}
+#btn::after {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-color: transparent;
+    border: 2px solid black;
+    border-radius: inherit;
+    animation: radiate 2s infinite;
 }
 #menu-btn {
     width: 5em;
