--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     align-items: center;
     gap: 5em;
+    overflow: hidden;
 }
 #logo {
     width: 12em;
@@ -19,6 +20,7 @@
 }
 #logo-svg {
     width: 40rem;
+    z-index: 5;
 }
 .bottom-text,
 .top-text {
@@ -27,6 +29,7 @@
 .bottom-text {
     left: 10em;
     bottom: 2em;
+    z-index: -1;
 }
 .top-text {
     top: -1em;
