--- a/src/styles/explorebtn.css
+++ b/src/styles/explorebtn.css
@@ -28,7 +28,16 @@
     background-color: transparent;
     border: 2px solid black;
     border-radius: inherit;
-    animation: radiate 2s infinite;
+    animation: radiate 1.5s infinite;
+}
+#menu-btn::after {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background-color: transparent;
+    border: 2px solid white;
+    border-radius: inherit;
+    animation: radiate 1.5s infinite;
 }
 #menu-btn {
     width: 5em;
