--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,6 +5,8 @@
     display: flex;
     flex-direction: column;
     color: aliceblue;
+    scroll-snap-type: y mandatory ;
+    scroll-snap-points-y: 100vh;
 }
 #logo {
     width: 7em;
@@ -13,7 +15,7 @@
 #viewport {
     width: 100vw;
     height: 100vh;
-    overflow-x: hidden;
+    scroll-snap-align: start ;
 }
 #social-media {
     width: 1.5em;
