--- a/src/styles/newhome.css
+++ b/src/styles/newhome.css
@@ -1,3 +1,8 @@
+
+:root {
+    --primaryblue-clr: rgb(33, 72, 123);
+    --icewhite-clr: aliceblue;
+}
 .parent {
     width: 100vw;
     height: 100%;
@@ -42,10 +47,10 @@
     background-size: cover ;
 }
 .viewport:nth-child(5) {
-    color: rgb(33, 72, 123);
+    color: var(--primaryblue-clr);
 }
 .viewport:nth-child(6) {
-    background-color: rgb(33, 72, 123);
+    background-color: var(--primaryblue-clr) ;
 }
 #logo {
     width: 7em;
@@ -61,7 +66,7 @@
     height: 70%;
     top: 0;
     left: 0;
-    background-color: rgb(33, 72, 123);
+    background-color: var(--primaryblue-clr);
     z-index: -5;
 }
 #hr {
