--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -8,7 +8,14 @@
     background-color: rgb(33, 72, 123);
 }
 #menu-icon-svg {
+    width: 3em;
+    height: 1em;
+}
+#icon-btn {
+    border-radius: 50%;
+    padding: 1em;
     width: 4em;
+    aspect-ratio: 1;
     margin-right: 4em;
 }
 #main {
